--- a/profiles/templates/abstract/base.html
+++ b/profiles/templates/abstract/base.html
@@ -30,43 +30,45 @@
         {% block style %}{% endblock %}
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="{% url "profiles-home" %}">Judo Profile</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div id="nav" class="collapse navbar-collapse">
-                    <div class="navbar-nav me-auto d-flex justify-content-center">
-                        {% if request.user.is_authenticated %}
-                            <a class="nav-link {% block profiles %}{% endblock %}" href="{% url "profiles-profiles" %}">Übersicht</a>
-                            {% if request.user.profile %}
-                                <a class="nav-link {% block own %}{% endblock %}" href="{% url "profiles-profile" request.user.profile.id %}">Eigenes Profil</a>
-                            {% endif %}
-                            {% block actions %}{% endblock %}
-                            {% if request.user.is_superuser %}
-                                <a class="nav-link {% block manage %}{% endblock %}" href="{% url "users-manage" %}">Benutzerverwaltung</a>
-                            {% endif %}
-                            {% block admin_actions %}{% endblock %}
+        <header class="sticky-top">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary mb-3">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="{% url "profiles-home" %}">Judo Profile</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div id="nav" class="collapse navbar-collapse">
+                        <div class="navbar-nav me-auto d-flex justify-content-center">
+                            {% if request.user.is_authenticated %}
+                                <a class="nav-link {% block profiles %}{% endblock %}" href="{% url "profiles-profiles" %}">Übersicht</a>
+                                {% if request.user.profile %}
+                                    <a class="nav-link {% block own %}{% endblock %}" href="{% url "profiles-profile" request.user.profile.id %}">Eigenes Profil</a>
+                                {% endif %}
+                                {% block actions %}{% endblock %}
+                                {% if request.user.is_superuser %}
+                                    <a class="nav-link {% block manage %}{% endblock %}" href="{% url "users-manage" %}">Benutzerverwaltung</a>
+                                {% endif %}
+                                {% block admin_actions %}{% endblock %}
+                            </div>
+                            <div class="navbar-nav d-flex justify-content-end">
+                                <span class="nav-link">Hallo {{ request.user.first_name|default:request.user.username }}</span>
+                                <button id="theme-selector" class="btn btn-secondary btn-sm" onclick="change_color_theme()"></button>
+                                <a class="nav-link {% block update %}{% endblock %}" href="{% url "users-update" %}">Passwort ändern</a>
+                                <a class="nav-link" href="{% url "users-logout" %}">Abmelden</a>
+                            {% else %}
                         </div>
-                        <div class="navbar-nav d-flex justify-content-end">
-                            <span class="nav-link">Hallo {{ request.user.first_name|default:request.user.username }}</span>
-                            <button id="theme-selector" class="btn btn-secondary btn-sm" onclick="change_color_theme()"></button>
-                            <a class="nav-link {% block update %}{% endblock %}" href="{% url "users-update" %}">Passwort ändern</a>
-                            <a class="nav-link" href="{% url "users-logout" %}">Abmelden</a>
-                        {% else %}
-                    </div>
-                    <div class="navbar-nav d-flex">
-                        <button id="theme-selector" class="btn btn-secondary btn-sm" onclick="change_color_theme()">Auto</button>
-                        <a class="nav-link {% block login %}{% endblock %}" href="{% url "users-login" %}">Anmelden</a>
-                        <a class="nav-link {% block register %}{% endblock %}" href="{% url "users-register" %}">Mit Token Registrieren</a>
-                        {% endif %}
-                        <a class="nav-link {% block about %}{% endblock %}" href="{% url "profiles-about" %}">Über</a>
+                        <div class="navbar-nav d-flex">
+                            <button id="theme-selector" class="btn btn-secondary btn-sm" onclick="change_color_theme()">Auto</button>
+                            <a class="nav-link {% block login %}{% endblock %}" href="{% url "users-login" %}">Anmelden</a>
+                            <a class="nav-link {% block register %}{% endblock %}" href="{% url "users-register" %}">Mit Token Registrieren</a>
+                            {% endif %}
+                            <a class="nav-link {% block about %}{% endblock %}" href="{% url "profiles-about" %}">Über</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <script src="{% static "script/colorscheme.js" %}"></script>
-        </nav>
+                <script src="{% static "script/colorscheme.js" %}"></script>
+            </nav>
+        </header>
         <div id="noscript" class="container position-absolute top-50 start-50 translate-middle text-center alert-danger alert">
             <h4>Diese Seite funktioniert nur mit Javascript - für die Nutzung bitte aktivieren</h4>
         </div>
