--- a/users/templates/update.html
+++ b/users/templates/update.html
@@ -17,7 +17,7 @@
                 <li>mindestens eine Ziffer</li>
             </ul>
             <input type="password" class="form-control" name="new_pass_confirm" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="neues Passwort wiederholen" required>
-            <input type="submit" class="btn btn-secondary" value="Passwort ändern">
+            <input type="submit" class="btn btn-secondary mt-4" value="Passwort ändern">
         </form>
     </div>
 {% endblock %}
