--- a/users/templates/users.html
+++ b/users/templates/users.html
@@ -14,7 +14,7 @@
 
 {% block content %}
     <div class="container">
-        <select id="type" name="type" class="form-select">
+        <select id="type" name="type" class="form-select mb-2">
             <option value="">Alle</option>
             <option value="a" selected>Aktive</option>
             <option value="au">Aktive Judoka</option>
@@ -33,8 +33,6 @@
         <table class="table">
             <thead>
                 <th>Benutzername</th>
-                <th></th>
-                <th>Name</th>
                 <th></th>
                 <th></th>
             </thead>
