--- a/users/templates/users/new.html
+++ b/users/templates/users/new.html
@@ -11,8 +11,8 @@
         <form method="post">
             {% csrf_token %}
             <input type="text" class="form-control" name="first_name" placeholder="Vorname" required>
-            <input type="text" class="form-control" name="last_name" placeholder="Nachname" required>
-            <input type="submit" class="btn btn-secondary" value="Token erstellen">
+            <input type="text" class="form-control my-2" name="last_name" placeholder="Nachname" required>
+            <input type="submit" class="btn btn-secondary mt-2" value="Token erstellen">
         </form>
     </div>
 {% endblock %}
