--- a/profiles/templates/abstract/profile_base.html
+++ b/profiles/templates/abstract/profile_base.html
@@ -12,12 +12,12 @@
         {% block hidden_data %}{% endblock %}
     </div>
     {% block form_container %}<div id="form_container">{% endblock %}
-    <div class="mx-2">
+    <div class="m-2">
         <div id="general_container" class="border rounded mx-auto px-2">
             <table>
                 <tr>
                     <td>
-                        <p id="title" style="margin-top: 1rem;"><b>Kämpferprofil von</b></p>
+                        <p id="title" style="margin-top: 1rem;"><b>Kämpferprofil von:</b> {% block name %}{% endblock %}</p>
                         <div  id="general_info" class="d-flex align-items-center flex-wrap justify-content-center mb-1">
                             {% block general_info %}{% endblock %}
                             <div>
@@ -47,7 +47,7 @@
         </div>
     </div>
     <div id="main" class="d-flex align-items-center flex-wrap justify-content-center">
-        <div id="positions" class="border rounded m-2" style="width: 31.9rem;">
+        <div id="positions" class="border rounded m-2" style="width: 34.1rem;">
             <div class="d-flex flex-wrap justify-content-between">
                 <div class="my-3 mx-3" style="width: fit-content;">
                     <h3 id="image_desc" class="mb-3">Griffpositionen</h3>
@@ -68,7 +68,7 @@
                     <div class="l position option 4" id="oL4">4</div>
                 </div>
             </div>
-            <hr>
+            <hr class="mt-1">
             <div id="image_container">
                 {% include "profiles/judogi.svg" %}
                 <div class="r move position 1" id="pR1">1</div>
@@ -84,13 +84,13 @@
         <div class="border rounded m-2" style="min-width: 0;">
             <div class="table-responsive container" style="padding-left: unset; padding-right: unset; width: unset;"> 
                 <table id="own" class="table table-borderless caption-top m-2 text-nowrap" style="width: auto;">
-                    <caption id="own_techniques">Eigene Techniken</caption>
+                    <caption id="own_techniques" class="text-center">Eigene Techniken</caption>
                     <tr class="align-bottom">
                         <td>
                             <div class="border rounded text-center">
                                 <table class="own_techniques m-2" id="own5">
                                 </table>
-                                    {% block own5 %}{% endblock %}
+                                {% block own5 %}{% endblock %}
                             </div>
                         </td>
                         <td class="align-top">
@@ -104,7 +104,7 @@
                             <div class="border rounded text-center">
                                 <table class="own_techniques m-2" id="own1">
                                 </table>
-                                    {% block own1 %}{% endblock %}
+                                {% block own1 %}{% endblock %}
                             </div>
                         </td>
                     </tr>
@@ -113,51 +113,49 @@
                             <div class="border rounded text-center">
                                 <table class="own_techniques m-2" id="own4">
                                 </table>
-                                    {% block own4 %}{% endblock %}
+                                {% block own4 %}{% endblock %}
                             </div>
                         </td>
                         <td class="align-bottom">
                             <div class="border rounded text-center">
                                 <table class="own_techniques m-2" id="own3">
                                 </table>
-                                    {% block own3 %}{% endblock %}
+                                {% block own3 %}{% endblock %}
                             </div>
                         </td>
                         <td>
                             <div class="border rounded text-center">
                                 <table class="own_techniques m-2" id="own2">
                                 </table>
-                                    {% block own2 %}{% endblock %}
+                                {% block own2 %}{% endblock %}
                             </div>
                         </td>
                     </tr>
                 </table>
             </div>
         </div>
-    </div>
-    <div class="container border rounded ">
-        <table id="ranks" class="table table-responsive">
-            <tr>
-                <td class="rank" colspan="5">
-                    <table id="special_rank">
-                        <caption>Spezialtechniken</caption>
+        <div class="m-2 mb-3">
+            <div class="mx-auto border rounded d-flex flex-wrap justify-content-center" style="width: fit-content;">
+                <div class="rank m-3">
+                    <table id="special_rank" class="table table-borderless caption-top">
+                        <caption class="text-center">Spezialtechniken</caption>
                         {% block special %}{% endblock %}
                     </table>
-                </td>
-                <td class="rank" colspan="4">
-                    <table id="ground_rank">
-                        <caption>Bodentechniken</caption>
+                </div>
+                <div class="rank m-3">
+                    <table id="ground_rank" class="table table-borderless caption-top">
+                        <caption class="text-center">Bodentechniken</caption>
                         {% block ground %}{% endblock %}
                     </table>
-                </td>
-                <td class="rank" colspan="8">
-                    <table id="combination_rank">
-                        <caption>Kombinationen</caption>
+                </div>
+                <div class="rank m-3">
+                    <table id="combination_rank" class="table table-borderless caption-top">
+                        <caption class="text-center">Kombinationen</caption>
                         {% block combination %}{% endblock %}
                     </table>
-                </td>
-            </tr>
-        </table>
+                </div>
+            </div>
+        </div>
     </div>
     {% block buttons %}{% endblock %}
     {% block form_container_end %}</div>{% endblock %}
