--- a/profiles/templates/profiles/manage.html
+++ b/profiles/templates/profiles/manage.html
@@ -49,7 +49,7 @@
                                                 await navigator.clipboard.writeText(token)
                                                 button.innerHTML = "Token kopiert"
                                                 button.classList.add("active")
-                                                await delay(2500)
+                                                await delay(1500)
                                                 button.innerHTML = "Token kopieren"
                                                 button.classList.remove("active")
                                             }
@@ -72,7 +72,7 @@
             hx-swap="innerHTML settle:3s"
             hx-target="#success">
                 {% csrf_token %}
-                <select id="permission" name="permission" class="form-select">
+                <select id="permission" name="permission" class="form-select mb-2">
                     <option value="view_profile">Anzeigen</option>
                     <option value="change_profile">Bearbeiten</option>
                     <option value="manage_profile">Verwalten</option>
