--- a/profiles/templates/profiles/new.html
+++ b/profiles/templates/profiles/new.html
@@ -37,18 +37,18 @@
 {% endblock %}
 
 {% block general_info %}
-            <div>
-                <input class="form-control" type="text" id="name" placeholder="Vorname" value="{{ profile.name|default:"" }}" required>
-            </div>
-            <div>
-                <input class="form-control" type="text" id="last_name" placeholder="Nachname" value="{{ profile.last_name|default:"" }}" required>
-            </div>
-            <div>
-                <input class="form-control" type="number" id="year" min="1900" max="2099" step="1" value="{{ profile.year|default:2007 }}" placeholder="Jahrgang" size="5" required>
-            </div>
-            <div>
-                <input class="form-control" type="number" id="weight" min="30" max="200" step="1" placeholder="Gewicht (kg)" value="{{ profile.weight|default:"" }}" size="8" required>
-            </div>
+    <div>
+        <input class="form-control" type="text" id="name" placeholder="Vorname" value="{{ profile.name|default:"" }}" required>
+    </div>
+    <div>
+        <input class="form-control" type="text" id="last_name" placeholder="Nachname" value="{{ profile.last_name|default:"" }}" required>
+    </div>
+    <div>
+        <input class="form-control" type="number" id="year" min="1900" max="2099" step="1" value="{{ profile.year|default:2007 }}" placeholder="Jahrgang" size="5" required>
+    </div>
+    <div>
+        <input class="form-control" type="number" id="weight" min="30" max="200" step="1" placeholder="Gewicht (kg)" value="{{ profile.weight|default:"" }}" size="9" required>
+    </div>
 {% endblock %}
 
 {% block delete_positions %}
@@ -92,7 +92,6 @@
 {% endblock %}
 
 {% block special %}
-    <button class="btn btn-success btn-sm" onclick="add_rank_item('special')">Hinzufügen</button>
     <tr>
         <td id="special1" class="special"></td>
     </tr>
@@ -105,10 +104,14 @@
     <tr>
         <td id="special4" class="special"></td>
     </tr>
+    <tr>
+        <td class="d-flex justify-content-center">
+            <button class="btn btn-success btn-sm" onclick="add_rank_item('special')">Hinzufügen</button>
+        </td>
+    </tr>
 {% endblock %}
 
 {% block ground %}
-    <button class="btn btn-success btn-sm" onclick="add_rank_item('ground')">Hinzufügen</button>
     <tr>
         <td id="ground1" class="ground"></td>
     </tr>
@@ -121,10 +124,14 @@
     <tr>
         <td id="ground4" class="ground"></td>
     </tr>
+    <tr>
+        <td class="d-flex justify-content-center">
+            <button class="btn btn-success btn-sm" onclick="add_rank_item('ground')">Hinzufügen</button>
+        </td>
+    </tr>
 {% endblock %}
 
 {% block combination %}
-    <button class="btn btn-success btn-sm" onclick="add_rank_item('combination')">Hinzufügen</button>
     <tr>
         <td id="combination1" class="combination"></td>
     </tr>
@@ -136,6 +143,11 @@
     </tr>
     <tr>
         <td id="combination4" class="combination"></td>
+    </tr>
+    <tr>
+        <td class="d-flex justify-content-center">
+            <button class="btn btn-success btn-sm" onclick="add_rank_item('combination')">Hinzufügen</button>
+        </td>
     </tr>
 {% endblock %}
 
