--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -18,8 +18,8 @@
         <form method="post">
             {% csrf_token %}
             <input class="form-control" type="text" name="user" placeholder="Benutzername" required>
-            <input class="form-control" type="password" name="pass" placeholder="Passwort" required>
-            <input class="btn btn-secondary" type="submit" value="Login">
+            <input class="form-control my-2" type="password" name="pass" placeholder="Passwort" required>
+            <input class="btn btn-secondary mt-2" type="submit" value="Login">
             <input type="hidden" name="next" value="{{ next }}">
         </form>
     </div>
